# metactl

./: .claudeignore  .cursorignore  .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE  LICENSE-DOCS  Makefile  NOTICE  README.md  SECURITY.md  TRADEMARK.md
crates/metactl/: Cargo.toml
crates/metactl/assets/starter/: README.md  library.json
crates/metactl/assets/starter/packs/: agentic-artifact-forge.json  library-organization-guide.json  local-only-example.json  metactl-project-onboarding.json  release-manager.json
crates/metactl/assets/starter/policies/: release-policy.json
crates/metactl/src/: cli_demo.rs  cli_export.rs  cli_hook.rs  cli_pack.rs  cli_plugin.rs  cli_profile.rs  cli_skills.rs  cli_source.rs  fixture_kernel.rs  jsonrpc.rs  kernel.rs  lib.rs  library_frontmatter.rs  library_hooks.rs  library_instruction.rs  library_registry.rs  library_stack.rs  library_validation.rs  main.rs  materializer.rs  mcp.rs  plugin_projection.rs  project.rs  project_import.rs  reference_kernel.rs  setup.rs  skill_audit.rs  suite_registry.rs  surface_usage.rs  types.rs
crates/metactl/tests/: cli_workflow.rs  jsonrpc_errors.rs  jsonrpc_golden.rs  mcp.rs  release_readiness.rs  skill_audit_cli.rs  spec_019_regressions.rs  target_aliases.rs  trust_blindspots.rs
crates/metactl/tests/cli_workflow/: compile.rs  explain_status.rs  fleet.rs  ignore.rs  plugin.rs  profile.rs  project_import.rs  search.rs  source.rs  sync.rs
crates/metactl/tests/support/: mod.rs
crates/metactld/: Cargo.toml
crates/metactld/src/: main.rs
(+234 files in other folders)
