[package]
name = "metactl"
version = "0.1.15"
edition = "2021"
authors = ["metactl contributors"]
description = "metactl v2 reference kernel and JSON-RPC service"
license = "Apache-2.0"
repository = "https://github.com/pylit-ai/metactl"
readme = "../../README.md"
exclude = [".metactl/**"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
include_dir = "0.7.4"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
thiserror = "1"
tracing = "0.1"
sha2 = "0.10"
hex = "0.4"
tempfile = "3"

[dev-dependencies]
pretty_assertions = "1"
